--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reality Controller - Interactive Physics Playground</title>
+    <title>Reality Controller - Prompt-Based Website</title>
     <meta name="description" content="Control digital reality with natural language commands. Transform physics, colors, and animations in real-time with an interactive web playground.">
     <meta name="author" content="Lovable">
     <meta name="keywords" content="interactive physics, web playground, natural language commands, digital art, creative coding">
